--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -28,15 +28,10 @@
         </Grid.InputBindings>
 
         <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-
-            <TextBlock x:Name="HelloTB" TextAlignment="Center" Padding="30" Foreground="White" FontSize="14"/>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock TextAlignment="Center" Padding="3" Foreground="White" FontSize="14"  Text="{Binding Account.Name, Mode=TwoWay}"/>
-                <TextBlock  TextAlignment="Center" Padding="3" Foreground="White" FontSize="14" Text="{Binding Account.Surname, Mode=TwoWay}"/>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBlock x:Name="HelloTB" TextAlignment="Center" Padding="3" Foreground="White" FontSize="16"/>
+                <TextBlock TextAlignment="Center" Padding="3" Foreground="White" FontSize="16"  Text="{Binding Account.Name, Mode=TwoWay}"/>
+                <TextBlock TextAlignment="Center" Padding="3" Foreground="White" FontSize="16" Text="{Binding Account.Surname, Mode=TwoWay}"/>
             </StackPanel>
      
         </Grid>
@@ -92,14 +87,14 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Image Source="{Binding Url,Mode=TwoWay}" Width="45" Height="45" Margin="10" HorizontalAlignment="Center" Grid.ColumnSpan="2"/>
-                <Label Content="Data trade start" FontSize="16" Grid.Row="1" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="{Binding Currency_Selected.data_start, Mode=TwoWay}" FontSize="16" Grid.Row="1" Grid.Column="1" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="{Binding Currency_Selected.volume_1day_usd, Mode=TwoWay}" FontSize="16" Grid.Row="2" Grid.Column="1" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="Volume 1day usd" FontSize="16" Grid.Row="2" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="Volume 1mth usd" FontSize="16" Grid.Row="3" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="{Binding Currency_Selected.volume_1mth_usd,Mode=TwoWay}" FontSize="16" Grid.Row="3" Grid.Column="1" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="Volume 1hour usd" FontSize="16" Grid.Row="4" Margin="17 0 0 0" Foreground="AntiqueWhite"/>
-                <Label Content="{Binding Currency_Selected.volume_1hrs_usd,Mode=TwoWay}" FontSize="16" Grid.Row="4" Grid.Column="1"  Margin="17 0 0 0" Foreground="AntiqueWhite"/>
+                <Label Content="Data trade start" FontSize="15" Grid.Row="1" Margin="30 0 0 0" Foreground="AntiqueWhite"/>
+                <Label Content="{Binding Currency_Selected.data_start, Mode=TwoWay, StringFormat={}{0:F3}}" FontSize="15" Grid.Row="1" Grid.Column="1" Margin="0 0 30 0" Foreground="AntiqueWhite"/>
+                <Label Content="{Binding Currency_Selected.volume_1day_usd, Mode=TwoWay, StringFormat={}{0:F3}}" FontSize="15" Grid.Row="2" Grid.Column="1" Margin="0 0 30 0" Foreground="AntiqueWhite"/>
+                <Label Content="Volume 1day usd" FontSize="15" Grid.Row="2" Margin="30 0 0 0" Foreground="AntiqueWhite"/>
+                <Label Content="Volume 1mth usd" FontSize="15" Grid.Row="3" Margin="30 0 0 0" Foreground="AntiqueWhite"/>
+                <Label Content="{Binding Currency_Selected.volume_1mth_usd,Mode=TwoWay, StringFormat={}{0:F3}}" FontSize="15" Grid.Row="3" Grid.Column="1" Margin="0 0 30 0" Foreground="AntiqueWhite"/>
+                <Label Content="Volume 1hour usd" FontSize="15" Grid.Row="4" Margin="30 0 0 0" Foreground="AntiqueWhite"/>
+                <Label Content="{Binding Currency_Selected.volume_1hrs_usd,Mode=TwoWay, StringFormat={}{0:F3}}" FontSize="15" Grid.Row="4" Grid.Column="1"  Margin="0 0 30 0" Foreground="AntiqueWhite"/>
             </Grid>
         </materialDesign:Card>
         <materialDesign:Card Background="#27378C" Foreground="White" FontSize="12" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="10 0 25 20">
@@ -119,12 +114,13 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <TextBlock x:Name="ForBuyL" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Text = "For buying - register or sign!" FontSize="18" TextAlignment="Center" VerticalAlignment="Center" Foreground="#f2f2f2" />
-                <Label x:Name="BalanceL" Grid.Row="1"  Grid.Column="0" Foreground="White" FontSize="16"  Content="Balance:" Margin="40 0 0 0" VerticalAlignment="Top" HorizontalAlignment="Left" Visibility="Hidden" />
-                <Label x:Name="WalletL" Foreground="White" Content="{Binding Wallet.Sum,Mode=TwoWay}" Margin="0 0 20 0" Grid.Row="1"   Grid.Column="1" Height="35" FontSize="16" Visibility="Hidden"/>
-                <Label x:Name="AmountL" Grid.Row="2" Grid.Column="0" Foreground="White" FontSize="16" Content="Amount: "  Visibility="Hidden" Margin="40 0 0 0"/>
-
-                <TextBox x:Name="AmountCoineTB" FontSize="16" IsReadOnly="False" Padding="5" Grid.Row="2"   Grid.Column="1" Height="30" Text="{Binding AmountCoine, Mode=TwoWay}" Visibility="Hidden"/>
-                <TextBox Grid.Row="0"  Grid.Column="1" Text="{Binding ErrorBuy,Mode=TwoWay}" Foreground="Red" Height="40" IsReadOnly="True" />
+                <Label x:Name="BalanceL" Visibility="Hidden" Grid.Row="1"  Grid.Column="0" Foreground="White" FontSize="16"  Content="Balance:" Margin="40 0 0 0" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                <Label x:Name="WalletL" Visibility="Hidden" Foreground="White" Content="{Binding Wallet.Sum,Mode=TwoWay}" Margin="0 0 0 10" Grid.Row="1" Grid.Column="1" Height="35" FontSize="16" />
+                <Label x:Name="AmountL" Visibility="Hidden" Grid.Row="2" Foreground="White" FontSize="16" Content="Amount: "  Margin="40 0 0 0"/>
+                <TextBox x:Name="AmountCoineTB" CaretBrush="White" FontSize="16" Visibility="Hidden" IsReadOnly="False" Padding="5" Grid.Row="2" Margin="0 0 0 20"   Grid.Column="1" Height="30" Text="{Binding AmountCoine, Mode=TwoWay}" />
+                
+                <!--<Label Grid.Column="1" Content="{Binding ErrorBuy,Mode=TwoWay}" Foreground="Red" Height="40" />-->
+                <TextBox Grid.Column="1" Text="{Binding ErrorBuy,Mode=TwoWay}" Foreground="Red" Height="40" IsReadOnly="True"/>
 
                 <Button x:Name="ClearBtn"  Grid.Row="1" Grid.Column="4" Foreground="White" Content="Clear" Height="32" FontSize="14" FontWeight="SemiBold" Margin="0 0 90 0" Visibility="Hidden"
                 Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}"  Command="{Binding ClearCommand,Mode=TwoWay}" />
@@ -132,10 +128,9 @@
                 Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}" Command="{Binding AddCoine, Mode=TwoWay}" Visibility="Hidden"  Margin="0 0 90 0"/>
                     <Button x:Name="BuyBtn"  Grid.Row="3" Grid.Column="4" Foreground="White" Content="Buy" Height="32" FontSize="14" FontWeight="SemiBold"
                 Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}"  Command="{Binding BuyCommand, Mode=TwoWay}"  Visibility="Hidden"  Margin="0 0 90 0" />
-                    <Button x:Name="HistoryBtn"  Grid.Row="4" Grid.Column="4" Foreground="White" Content="History" Height="32" FontSize="14" FontWeight="SemiBold"
+                <Button x:Name="HistoryBtn"  Grid.Row="4" Grid.Column="4" Foreground="White" Content="History" Height="32" FontSize="14" FontWeight="SemiBold"
                 Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}"  Command="{Binding GetHistroryCommand, Mode=TwoWay}" Visibility="Hidden"  Margin="0 0 90 0"/>
-                
-                
+
                 <DataGrid x:Name="WalletDG" Grid.Row="3" Grid.ColumnSpan="3" AutoGenerateColumns="False"  Grid.Column="0"  FontSize="16"
                   Grid.RowSpan="3" Foreground="#f2f2f2" IsReadOnly="True" GridLinesVisibility="None" ItemsSource="{Binding Set, Mode=TwoWay}" >
                     <DataGrid.Resources>
@@ -178,7 +173,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <Label x:Name="HistoryL" Visibility="Hidden" Content="History" Foreground="White" FontSize="22" Padding="20" Margin="60 0 0 0" Grid.Column="1"/>
-                <DataGrid  Foreground="#DEDEDE" Margin="0 20 0 0" Grid.Column="1" Padding="20" GridLinesVisibility="None" FontSize="14" AutoGenerateColumns="False" ItemsSource="{Binding HistoryAccounts,Mode=TwoWay}" >
+                <DataGrid x:Name="HistoryDG"  Foreground="#DEDEDE" Margin="0 20 0 0" Grid.Column="1" Padding="20" GridLinesVisibility="None" FontSize="14" AutoGenerateColumns="False" ItemsSource="{Binding HistoryAccounts,Mode=TwoWay}" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Transaction_date,Mode=TwoWay}"/>
                         <DataGridTextColumn Binding="{Binding Id_assets,Mode=TwoWay}"/>
