--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -117,7 +117,7 @@
                 <Label x:Name="BalanceL" Visibility="Hidden" Grid.Row="1"  Grid.Column="0" Foreground="White" FontSize="16"  Content="Balance:" Margin="40 0 0 0" VerticalAlignment="Top" HorizontalAlignment="Left" />
                 <Label x:Name="WalletL" Visibility="Hidden" Foreground="White" Content="{Binding Wallet.Sum,Mode=TwoWay}" Margin="0 0 0 10" Grid.Row="1" Grid.Column="1" Height="35" FontSize="16" />
                 <Label x:Name="AmountL" Visibility="Hidden" Grid.Row="2" Foreground="White" FontSize="16" Content="Amount: "  Margin="40 0 0 0"/>
-                <TextBox x:Name="AmountCoineTB" CaretBrush="White" FontSize="16" Visibility="Hidden" IsReadOnly="False" Padding="5" Grid.Row="2" Margin="0 0 0 20"   Grid.Column="1" Height="30" Text="{Binding AmountCoine, Mode=TwoWay}" />
+                <TextBox x:Name="AmountCoineTB" Visibility="Hidden" CaretBrush="White" FontSize="16"  IsReadOnly="False"  Grid.Row="2"   Grid.Column="1" Height="40" Text="{Binding AmountCoine, Mode=TwoWay}" />
                 
                 <!--<Label Grid.Column="1" Content="{Binding ErrorBuy,Mode=TwoWay}" Foreground="Red" Height="40" />-->
                 <TextBox x:Name="ErrTB" Visibility="Hidden" Grid.Column="1" Text="{Binding ErrorBuy,Mode=TwoWay}" Foreground="Red" Height="40" IsReadOnly="True"/>
@@ -131,7 +131,7 @@
                 <Button x:Name="HistoryBtn"  Grid.Row="4" Grid.Column="4" Foreground="White" Content="History" Height="32" FontSize="14" FontWeight="SemiBold"
                 Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}"  Command="{Binding GetHistroryCommand, Mode=TwoWay}" Visibility="Hidden"  Margin="0 0 90 0"/>
 
-                <DataGrid x:Name="WalletDG" Grid.Row="3" Grid.ColumnSpan="3" AutoGenerateColumns="False"  Grid.Column="0"  FontSize="16"
+                <DataGrid x:Name="WalletDG" Grid.Row="3" Grid.ColumnSpan="3" AutoGenerateColumns="False"  Grid.Column="0"  FontSize="16" Margin="10"
                   Grid.RowSpan="3" Foreground="#f2f2f2" IsReadOnly="True" GridLinesVisibility="None" ItemsSource="{Binding Set, Mode=TwoWay}" >
                     <DataGrid.Resources>
                         <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
